@@ -5,7 +5,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: wish.1,v 1.3 2003/02/13 22:09:12 kennykb Exp $
+'\" RCS: @(#) $Id: wish.1,v 1.4 2003/09/05 22:44:39 dgp Exp $
 '\" 
 .so man.macros
 .TH wish 1 8.0 Tk "Tk Applications"
@@ -14,8 +14,13 @@
 .SH NAME
 wish \- Simple windowing shell
 .SH SYNOPSIS
-\fBwish\fR ?\fIfileName arg arg ...\fR?
+\fBwish\fR ?-encoding \fIname\fR? ?\fIfileName arg arg ...\fR?
 .SH OPTIONS
+.IP "\fB\-encoding \fIname\fR" 20
+.VS 8.5
+Specifies the encoding of the text stored in \fIfileName\fR.
+This option is only recognized prior to the \fIfileName\fR argument.
+.VE 8.5
 .IP "\fB\-colormap \fInew\fR" 20
 Specifies that the window should have a new private colormap instead of
 using the default colormap for the screen.
@@ -32,14 +37,12 @@ as the name of the interpreter for \fBsend\fR commands.
 Execute all X server commands synchronously, so that errors
 are reported immediately.  This will result in much slower
 execution, but it is useful for debugging.
-.VS 8.0 br
 .IP "\fB\-use\fR \fIid\fR" 20
 Specifies that the main window for the application is to be embedded in
 the window whose identifier is \fIid\fR, instead of being created as an
 independent toplevel window.  \fIId\fR must be specified in the same
 way as the value for the \fB\-use\fR option for toplevel widgets (i.e.
 it has a form like that returned by the \fBwinfo id\fR command).
-.VE
 .IP "\fB\-visual \fIvisual\fR" 20
 Specifies the visual to use for the window.
 \fIVisual\fR may have any of the forms supported by the \fBTk_GetVisual\fR
@@ -57,16 +60,22 @@ to a script instead of having \fBwish\fR interpret them.
 language, the Tk toolkit, and a main program that reads commands
 from standard input or from a file.
 It creates a main window and then processes Tcl commands.
-If \fBwish\fR is invoked with no arguments, or with a first argument
-that starts with ``\-'', then it reads Tcl commands interactively from
-standard input.
+If \fBwish\fR is invoked with arguments, then the first few
+arguments, ?\fB-encoding \fIname\fR? ?\fIfileName\fR? specify the
+name of a script file, and, optionally, the
+encoding of the text data stored in that script file.  A value
+for \fIfileName\fR is recognized if the appropriate argument
+does not start with ``\-''.
+.PP
+If there are no arguments, or the arguments do not specify a \fIfileName\fR,
+then wish reads Tcl commands interactively from standard input.
 It will continue processing commands until all windows have been
 deleted or until end-of-file is reached on standard input.
 If there exists a file \fB.wishrc\fR in the home directory of
 the user, \fBwish\fR evaluates the file as a Tcl script
 just before reading the first command from standard input.
 .PP
-If \fBwish\fR is invoked with an initial \fIfileName\fR argument, then 
+If arguments to \fBwish\fR do specify a \fIfileName\fR, then 
 \fIfileName\fR is treated as the name of a script file.
 \fBWish\fR will evaluate the script in \fIfileName\fR (which
 presumably creates a user interface), then it will respond to events
@@ -170,7 +179,6 @@ When \fBwish\fR starts up, it treats all three lines as comments,
 since the backslash at the end of the second line causes the third
 line to be treated as part of the comment on the second line.
 .PP
-.VS 8.4
 The end of a script file may be marked either by the physical end of
 the medium, or by the character, '\\032' ('\\u001a', control-Z).
 If this character is present in the file, the \fBwish\fR application
@@ -178,7 +186,6 @@ will read text up to but not including the character.  An application
 that requires this character in the file may encode it as
 ``\\032'', ``\\x1a'', or ``\\u001a''; or may generate it by use of commands 
 such as \fBformat\fR or \fBbinary\fR.
-.VE
 .SH PROMPTS
 .PP
 When \fBwish\fR is invoked interactively it normally prompts for each
